--- a/css/main.sass
+++ b/css/main.sass
@@ -12,10 +12,8 @@
 
 @import form
 @import header
-@import footer
-@import error
-@import perfiles_creados
-@import tabla_perfiles
+@import notificacion
+
 
 html
   color: #222
