Agregando perfiles al oprimir boton 'crear' y guardandolos a la base de datos | | | | Notificación agregada al 'crear perfil', | | | | | agregamos el perfil creado en la parte inferior (la otra tabla) para ir listandolos | | |  reseteamos el formulario una vez que se mande correctamente la información

--- a/css/form.sass
+++ b/css/form.sass
@@ -76,14 +76,16 @@ main
                 tr
                     td
                         padding: 15px 0
-                    .acciones
-                        display: grid
-                        grid-template-columns: repeat(2, 1fr)
-                        a
-                            i
-                                font-size: 26px
-                                color: var(--secundario)
-                        button
-                            i
-                                font-size: 26px
-                                color: var(--primario)
+                    
+// ACCIONES DE BOTONES
+.acciones
+    display: grid
+    grid-template-columns: repeat(2, 1fr)
+    a
+        i
+            font-size: 26px
+            color: var(--secundario)
+    button
+        i
+            font-size: 26px
+            color: var(--primario)
