Mostrando los registros de la base de datos en la 2da tabla creada |||| diseño al thead de la 2da tabla

--- a/css/form.sass
+++ b/css/form.sass
@@ -64,19 +64,17 @@ main
         font-size: 30px
     .contenedor-tabla
         overflow: scroll
+        display: grid
         .listado_perfiles
-            padding: 100px
-            thead
-                tr
-                    th
-                        background-color: var(--primario)
-                        padding: 10px
-                        color: #fff
-            tbody
-                tr
-                    td
-                        padding: 15px 0
-                    
+
+//COLOR DE THEAD
+thead
+    tr
+        th
+            font-size: 19px
+            color: #fff
+            background-color: var(--primario)
+
 // ACCIONES DE BOTONES
 .acciones
     display: grid
