al precionar icono eliminar -> se remueven los registro de la base satisfactoriamente || se muestra notificacion || se remueve del DOM con ajax

--- a/css/form.sass
+++ b/css/form.sass
@@ -84,6 +84,7 @@ thead
             font-size: 26px
             color: var(--secundario)
     button
+        cursor: pointer
         i
             font-size: 26px
             color: var(--primario)
