--- a/css/main.css
+++ b/css/main.css
@@ -83,9 +83,11 @@ thead tr th {
   .acciones a i {
     font-size: 26px;
     color: var(--secundario); }
-  .acciones button i {
-    font-size: 26px;
-    color: var(--primario); }
+  .acciones button {
+    cursor: pointer; }
+    .acciones button i {
+      font-size: 26px;
+      color: var(--primario); }
 
 header {
   margin: 20px 0 50px;
